--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,9 @@ development:
   encoding: unicode
   database: myapp_development
   pool: 5
-  username: myapp
-  password:
+  host: localhost
+  username: postgres
+  password: santanu
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -43,8 +44,9 @@ test:
   encoding: unicode
   database: myapp_test
   pool: 5
-  username: myapp
-  password:
+  host: localhost
+  username: postgres
+  password: santanu
 
 production:
   adapter: postgresql
